--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
-name: project_ahmad
-description: A simple ledger app using Flutter and SQLite
+name: barz_project
+description: A new Flutter project.
+
+publish_to: 'none'
+
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.19.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.0.0+3
-  path_provider: ^2.0.10
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -17,4 +19,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
